<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMIActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#E170CB"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvBMICalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/raleway_bold"
        android:gravity="center_vertical"
        android:text="@string/tvBMICalculator"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toEndOf="@+id/tvBMICalculator"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvBMIValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="19.5"
        android:textColor="@color/BMI_pink"
        android:textSize="120dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="4dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/BMI_pink"
        app:layout_constraintBottom_toTopOf="@+id/toolbar2"
        tools:layout_editor_absoluteX="4dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:gravity="center_vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvBMIAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="right|center_vertical"
                    android:text="@string/tvAge"
                    android:textColor="@color/white"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/tvBMIAgeValue"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="left|center_vertical"
                    android:text="@string/tvBMIAgeValue"
                    android:textColor="@color/white"
                    android:textSize="25dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvBMISex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="right|center_vertical"
                    android:text="@string/tvSex"
                    android:textColor="@color/white"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/tvBMISexValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="0dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="left|center_vertical"
                    android:text="@string/tvBMISexValue"
                    android:textColor="@color/white"
                    android:textSize="25dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvBMIHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="right|center_vertical"
                    android:text="@string/tvHeight"
                    android:textColor="@color/white"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/tvBMIHeightValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="left|center_vertical"
                    android:text="@string/tvBMIHeightValue"
                    android:textColor="@color/white"
                    android:textSize="25dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvBMIWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="right|center_vertical"
                    android:text="@string/tvWeight"
                    android:textColor="@color/white"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/tvBMIWeightValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="left|center_vertical"
                    android:text="@string/tvBMIWeightValue"
                    android:textColor="@color/white"
                    android:textSize="25dp" />

            </TableRow>
        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>